src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_instruction_primary_parenthese_vide.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le if
//
// Resultats:
//    Ligne 13 : Erreur (parenthèse vide)
//    
//
// Historique:
//    cree le 04/01/2023

{
    ();
}
